Changes
=======

2013-03-26
----------

- Update to Python 2.7.4rc1, 3.2.4rc1 and 3.3.1rc1.
  [hannosch]

2013-03-16
----------

- Pin down Pillow to 1.x for python 2.4 and 2.5.
  Pillow 2.x supports only python >= 2.6
  [jone]

2013-01-08
----------

- Update to PyPy 2.0-beta1.
  [hannosch]

2012-10-01
----------

- Add more detailed platform detection for linux.
  [fschulze]

- Use virtualenv 1.8.2 except for Python 2.4, which needs virtualenv 1.7.2.
  [fschulze, sgillies]

- When installing Python 2.4 we need to use zc.recipe.egg 1.2.2.
  [fschulze]

- Added patch for python 2.5 to search for libs in /usr/lib/i386-linux-gnu/.
  Fixes bug occurring in Linux Mint 12.
  [silviot, fschulze]

2012-09-30
----------

- Update to Python 3.3.0 final.
  [hannosch]

2012-09-24
----------

- Update to Python 3.3.0rc3.
  [hannosch]

2012-09-10
----------

- Update to Python 3.3.0rc2.
  [hannosch]

2012-08-25
----------

- Update to Python 3.3.0rc1.
  [hannosch]

2012-07-19
----------

- Update to PyPy 1.9.
  [hannosch]

- Use Pillow by default, the problems caused by the original are too big by now.
  You can change the install arg with
  ``pil-install-args = -f http://dist.repoze.org/ -U PIL==1.1.6`` in the
  ``[buildout]`` section.
  [fschulze]

- Update to virtualenv 1.7.2.
  [hannosch]

- Update to Python 3.3.0b1.
  [hannosch]

2012-04-04
----------

- Update to Python 3.3.0a2.
  [hannosch]

2012-03-21
----------

- Added `python33.cfg` for Python 3.3.0a1.
  [hannosch]

- Update to Python 2.6.8rc2, Python 2.7.3rc2 and Python 3.2.3rc2.
  [hannosch]

2012-02-25
----------

- Update to virtualenv 1.7.1.2, PyPy 1.8, Python 2.6.8rc1, Python 2.7.3rc1
  and Python 3.2.3rc1.
  [hannosch]

2012-01-29
----------

- Fixed link to zlib 1.2.5 source that broke after release of zlib 1.2.6.
  [lukebrannon]

2011-12-22
----------

- Update to PyPy 1.7.
  [hannosch]

2011-11-30
----------

- Python 2.6: added patch for missing sslv2 support on newer Linuxes and to