@@ -11,9 +11,6 @@ versions = versions
 
 pil-install-args = Pillow
 
-[versions]
-monkeycmmi = 0.2
-
 [opt]
 recipe = plone.recipe.command
 location = ${buildout:parts-directory}/opt
