@@ -10,7 +10,7 @@ dummy-zlib = ${zlib:recipe}
 dummy-libjpeg = ${libjpeg:recipe}
 
 [libjpeg:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 url = http://www.ijg.org/files/jpegsrc.v8c.tar.gz
 extra_options =
     --prefix=${opt:location}
@@ -31,7 +31,7 @@ environment =
     CFLAGS=-arch x86_64
 
 [zlib:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 url = http://downloads.sourceforge.net/project/libpng/zlib/1.2.5/zlib-1.2.5.tar.bz2
 extra_options =
     --prefix=${opt:location}
