@@ -15,7 +15,7 @@ python24-pil-install-args = "Pillow<2"
 zc.recipe.egg = 1.2.2
 
 [python-2.4-build:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 dependencies = ${dependencies:dummy-dependencies}
 executable = ${opt:location}/bin/python2.4
 url = http://www.python.org/ftp/python/2.4.6/Python-2.4.6.tar.bz2
