@@ -12,7 +12,7 @@ python25-parts =
 python25-pil-install-args = "Pillow<2"
 
 [python-2.5-build:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 dependencies = ${dependencies:dummy-dependencies}
 executable = ${opt:location}/bin/python2.5
 url = http://www.python.org/ftp/python/2.5.6/Python-2.5.6.tar.bz2
