@@ -10,7 +10,7 @@ python26-parts =
 #    python-2.6-buildout
 
 [python-2.6-build:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 dependencies = ${dependencies:dummy-dependencies}
 executable = ${opt:location}/bin/python2.6
 url = http://www.python.org/ftp/python/2.6.8/Python-2.6.8.tar.bz2
