@@ -10,7 +10,7 @@ python27-parts =
 #     python-2.7-buildout
 
 [python-2.7-build:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 dependencies = ${dependencies:dummy-dependencies}
 executable = ${opt:location}/bin/python2.7
 url = http://www.python.org/ftp/python/2.7.4/Python-2.7.4rc1.tar.bz2
