@@ -8,7 +8,7 @@ python32-parts =
     python-3.2-test
 
 [python-3.2-build:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 dependencies = ${dependencies:dummy-dependencies}
 executable = ${opt:location}/bin/python3.2
 url = http://www.python.org/ftp/python/3.2.4/Python-3.2.4rc1.tar.bz2
