@@ -8,7 +8,7 @@ python33-parts =
     python-3.3-test
 
 [python-3.3-build:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 dependencies = ${dependencies:dummy-dependencies}
 executable = ${opt:location}/bin/python3.3
 url = http://www.python.org/ftp/python/3.3.1/Python-3.3.1rc1.tar.bz2
