@@ -8,7 +8,7 @@ readline-parts =
 dummy-readline = ${readline:recipe}
 
 [readline:default]
-recipe = monkeycmmi
+recipe = collective.recipe.cmmi
 url = http://ftp.gnu.org/gnu/readline/readline-6.2.tar.gz
 extra_options =
     --prefix=${opt:location}
